[gd_scene load_steps=4 format=3 uid="uid://b620rq506fm21"]

[ext_resource type="Script" uid="uid://b84aukmdp310q" path="res://chunk_manager/level_chunk_link.gd" id="1_0msia"]
[ext_resource type="Texture2D" uid="uid://cc8w1qek1m2db" path="res://chunk_manager/door.png" id="2_qfrgv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfrgv"]
size = Vector2(128, 64)

[node name="LevelChunkLink" type="Node2D"]
script = ExtResource("1_0msia")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qfrgv")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-7.1525574e-07, -3.5762787e-06)
texture = ExtResource("2_qfrgv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="tree_entered" from="Timer" to="." method="_on_tree_entered"]
